--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/shiva-shiva/readmeGenerator#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "inquirer": "^7.3.3"
   }
 }
